fix: change z-index for menu

--- a/plants/css/style-380px.css
+++ b/plants/css/style-380px.css
@@ -56,6 +56,7 @@
         -webkit-transition: right .3s ease-in-out;
         -o-transition: right .3s ease-in-out;
         transition: right .3s ease-in-out;
+        z-index: 10;
     }
 
     .header__list {
